2022/07/24 22:31 delete employee retire radio button 직원 퇴사 여부 변경 가능한 라디오 버튼  style="display: none;" 적용

--- a/com-project-clean/src/main/resources/templates/employee/modifyEmployee.html
+++ b/com-project-clean/src/main/resources/templates/employee/modifyEmployee.html
@@ -78,9 +78,9 @@
 	          </tr>
 	          <tr>
 	            <td class="subTitle">생년월일</td>
-	            <td th:text="${employee.employeeBirth}"></td>
-	            <td class="subTitle">퇴사여부</td>
-	            <td>
+	            <td th:text="${employee.employeeBirth}" colspan="3"></td>
+	            <td class="subTitle" style="display: none;">퇴사여부</td>
+	            <td  style="display: none;">
 	              <Label for="Y">Y</Label>
 	              <input type="radio" name="employeeRetireYn" id="Y" value="Y">
 	              <Label for="N">N</Label>
