--- a/com-project-clean/src/main/resources/templates/statistics/bestEmployee.html
+++ b/com-project-clean/src/main/resources/templates/statistics/bestEmployee.html
@@ -89,7 +89,7 @@
 					</div>
 					<div class="picture">
 					
-					<img id="pictureImg" th:src="@{/adminEmployeePicture/} + ${employee.employeePictureSaveName}" 
+					<img id="pictureImg" th:src="@{/adminEmployeePicture/} + ${bestEmployee.employeePictureSaveName}" 
              	  		 alt="사진을 등록해주세요" width="100px" height="100px">
 					
 					</div>
@@ -97,7 +97,7 @@
 				<table>
 					<tr>
 						<td>이달의 우수직원</td>
-						<td th:text="${ bestEmployee }"></td>  
+						<td th:text="${ bestEmployee.employeeName }"></td>  
 					</tr>
 				</table>
 				</div>
@@ -109,10 +109,10 @@
 					<div class="table">
 						<table>
 						<tr><th>순 위</th><th>이 름</th><th>근무시간</th></tr>
-						<tr th:each="employee : ${ employeeList }">			
-							<td th:text="${ employee.ranking }"></td>
-							<td th:text="${ employee.name }"></td>
-							<td th:text="${ employee.totalWorkingHours }"></td>
+						<tr th:each="employee, employeeStat : ${ employeeList }">			
+							<td th:text="${ employeeStat.count }"></td>
+							<td th:text="${ employee.employeeName }"></td>
+							<td th:text="${ employee.employeeSumTime }"></td>
 						</tr>
 						</table>
 					</div>
