--- a/com-project-clean/src/main/resources/templates/statistics/adminSalaryDetail.html
+++ b/com-project-clean/src/main/resources/templates/statistics/adminSalaryDetail.html
@@ -8,9 +8,9 @@
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <style>
-div {
-	width: 100%;
-	height: 100%;
+
+tr:nth-of-type(1) {
+	background: #7DBEED;
 }
 
 table {
@@ -20,74 +20,48 @@ table {
 	border-style: hidden;
 }
 
-.paging {
-	width: 100%;
+table th {
+	border: 1px solid black;
 }
 
-#averageSalesList {
-	width: 100%;
-	min-width: 400px;
-	height: 100%;
-	display: flex;
-	justify-content: center;
+table td {
+	border: 1px solid black;
 }
 
-#averageSales th {
-	color: #04AFD4;
-	font-weight: bold;
-	background-color: lightgray;
-}
-
-#averageSales td {
-	background-color: lightgray;
-	font-weight: bold;
-	font-size: 20;
-	color: #04AFD4;
-	margin: auto;
-}
-
-#averageSalesList {
-	width: 100%;
-	min-width: 700px;
-	height: 100%;
-}
-
-#averageSalesList table {
-	width: 100%;
-	height: 100%;
-}
-
-#averageSalesList tr {
+table tr {
+	border: 1px solid black;
 	text-align: center;
-	border: 1px solid black;
-}
-
-#averageSalesList th {
-	background-color: lightgray;
-}
-
-#averageSalesList td {
-	border: 1px solid black;
-	background-color: white;
+	font-weight: bold;
+	font-size: 30;
 }
 
 #title {
 	font-weight: bold;
-	font-size: 20;
-	color: #04AFD4;
+	font-size: 26;
 }
 
-.value {
-	font-weight: bold;
-	font-size: 20;
-	color: #04AFD4;
+.paging {
+	width: 100%;
 }
 
-.month {
-	font-weight: bold;
-	font-size: 20;
-	color: #575757;
+.btn-bs {
+	width: 80px;
+	margin-top: -6px;
+	height: 32px;
+	font-size: 15px;
+	padding: 20;
+	background-color: #7DBEED;
 }
+
+.btn-bs2 {
+	width: 50px;
+	margin-top: -10px;
+	height: 26px;
+	font-size: 15px;
+	padding: 20;
+	background-color: #7DBEED;
+}
+
 </style>
 <title>Document</title>
 
@@ -100,13 +74,8 @@ table {
 		<article>
 			<section>
 				<h4 id="title" align="center">관리자 직급별 직원 상세조회</h4>
-				<div id="averageSalesList">
-					<table id="averageSales">
-						<tr>
-							<th th:text="${ SalaryDetailListl }"></th>
-						</tr>
-					</table>
-				</div>
+				
+				
 				<br>
 
 
