--- a/com-project-clean/src/main/resources/templates/statistics/bestEmployee.html
+++ b/com-project-clean/src/main/resources/templates/statistics/bestEmployee.html
@@ -1,124 +1,122 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
- 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Document</title>
-    <style>
-	
-	div {
-		margin: 10px;
-		text-align: center;
-		font-weight: bold;
-		font-size:20;
-		color: #575757;
-	}
-	#top_employees {
-		display: flex;
-		width:100%;
-		min-width:800px;
-		height:100%;
-	}
-	#best_employee {
-		width:50%;
-		height:100%;
-		
-	}
-	#topfive_employees {
-		width:50%;
-		height:100%;
-	}
-	.picture {
-		width:300px;
-		height:300px;
-		background-image: url('');
-		background-size: cover;
-	}
-	.table {
-		width: 100%;
-		height: 100%;
-		display: flex;
-		justify-content: center;
-		border-collapse: collapse;
-		border-style: hidden;
-		text-align: center;
-	}
-	.table tr{
-		border: 1.5px solid gray;
-		
-	}
-	.table th{
-		border: 1.5px solid gray;
-		padding: 5px 30px;
-		background-color: lightgray;
-		font-size:20;
-		color: #575757;
-	}
-	.table td{
-		border: 1.5px solid gray;
-		padding: 5px;
-		color: #04AFD4;
-		font-weight: bold;
-		font-size: 20px;
-	}
-	#title {
-		font-weight: bold;
-		font-size:20;
-		color: #575757;
-	}
-	</style>
-  
+<meta charset="UTF-8">
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<title>Document</title>
+<style>
+
+#top_employees {
+	display: flex;
+
+}
+tr:nth-of-type(1) {
+	background: #7DBEED;
+}
+
+table {
+	width: 100%;
+	height: 100%;
+	border-collapse: collapse;
+	border-style: hidden;
+}
+
+table th {
+	border: 1px solid black;
+	background: #7DBEED;
+}
+
+table td {
+	border: 1px solid black;
+}
+
+table tr {
+	border: 1px solid black;
+	text-align: center;
+	font-weight: bold;
+	font-size: 30;
+}
+
+#title {
+	font-weight: bold;
+	font-size: 26;
+}
+
+.paging {
+	width: 100%;
+}
+
+.btn-bs {
+	width: 115px;
+	margin-top: -6px;
+	height: 32px;
+	font-size: 15px;
+	padding: 10;
+	background-color: #7DBEED;
+}
+</style>
+
 </head>
 <body>
 
 
-    <main>
-     <div th:include="common/header.html"></div>
-     <div th:include="statistics/statisticsAside.html"></div>
-      <article>
-          <section>
-              <h4 id="title">7월 근무시간 누적 통계</h4>
-			  <div id="top_employees">
-				<div id="best_employee">
-					<div>
-						<td>■ 이달의 우수직원</td>
-						<br>
-						<small>누적된 근무시간이 많은 직원은 이달의 우수직원이 된다.</small>
+	<main>
+		<div th:include="common/header.html"></div>
+		<div th:include="statistics/statisticsAside.html"></div>
+		<article>
+			<section>
+				<h4 id="title">7월 근무시간 누적 통계</h4>
+				<div  id="top_employees">
+				<div >
+					<div id="best_employee">
+						<div>
+							<td>■ 이달의 우수직원</td> <br> <small>누적된 근무시간이 많은 직원은 이달의
+								우수직원이 된다.</small>
+						</div>
+						<div class="picture">
+							<!-- 
+					<img id="pictureImg" 
+						th:if="${bestEmployee.employeePictureSaveName}!=null"
+						th:src="@{/adminEmployeePicture/} + ${bestEmployee.employeePictureSaveName}" 
+             	  		  width="100px" height="100px">
+					 -->
+						</div>
 					</div>
-					<div class="picture">
-					
-					<img id="pictureImg" th:src="@{/adminEmployeePicture/} + ${bestEmployee.employeePictureSaveName}" 
-             	  		 alt="사진을 등록해주세요" width="100px" height="100px">
-					
-					</div>
-				</div>
-				<table>
-					<tr>
-						<td>이달의 우수직원</td>
-						<td th:text="${ bestEmployee.employeeName }"></td>  
-					</tr>
-				</table>
-				</div>
-				
-				<div id="topfive_employees">
-					<div>
-					■ 7월 직원 근무시간 누적 통계 순위
-					</div>
-					<div class="table">
-						<table>
-						<tr><th>순 위</th><th>이 름</th><th>근무시간</th></tr>
-						<tr th:each="employee, employeeStat : ${ employeeList }">			
-							<td th:text="${ employeeStat.count }"></td>
-							<td th:text="${ employee.employeeName }"></td>
-							<td th:text="${ employee.employeeSumTime }"></td>
+					<table>
+						<tr>
+							<td>이달의 우수직원</td>
+							<td th:text="${ bestEmployee.employeeName }"></td>
 						</tr>
+					</table>
+				</div>
+
+
+				<div id="topfive_employees">
+					<div>■ 7월 직원 근무시간 누적 통계 순위</div>
+
+					<div class="table">
+						<table >
+							<tr>
+								<th>순 위</th>
+								<th>이 름</th>
+								<th>근무시간</th>
+							</tr>
+							<tr th:each="employee, stat : ${ bestEmployeeList }">
+								<td th:text="${ stat.count }"></td>
+								<td th:text="${ employee.employeeName }"></td>
+								<td th:text="|${ employee.employeeSumTime } 시간|"></td>
+							</tr>
 						</table>
 					</div>
-			  	</div>
-          </section>
-       </article>
-    </main>
+
+				</div>
+				</div>
+			</section>
+		</article>
+	</main>
 </body>
 </html>
