--- a/com-project-clean/src/main/resources/templates/statistics/employeeTotalWorkhoursDetail.html
+++ b/com-project-clean/src/main/resources/templates/statistics/employeeTotalWorkhoursDetail.html
@@ -8,9 +8,9 @@
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <style>
-div {
-	width: 100%;
-	height: 100%;
+
+tr:nth-of-type(1) {
+	background: #7DBEED;
 }
 
 table {
@@ -20,74 +20,39 @@ table {
 	border-style: hidden;
 }
 
-.paging {
-	width: 100%;
+table th {
+	border: 1px solid black;
 }
 
-#averageSalesList {
-	width: 100%;
-	min-width: 400px;
-	height: 100%;
-	display: flex;
-	justify-content: center;
+table td {
+	border: 1px solid black;
 }
 
-#averageSales th {
-	color: #04AFD4;
-	font-weight: bold;
-	background-color: lightgray;
-}
-
-#averageSales td {
-	background-color: lightgray;
-	font-weight: bold;
-	font-size: 20;
-	color: #04AFD4;
-	margin: auto;
-}
-
-#averageSalesList {
-	width: 100%;
-	min-width: 700px;
-	height: 100%;
-}
-
-#averageSalesList table {
-	width: 100%;
-	height: 100%;
-}
-
-#averageSalesList tr {
+table tr {
+	border: 1px solid black;
 	text-align: center;
-	border: 1px solid black;
-}
-
-#averageSalesList th {
-	background-color: lightgray;
-}
-
-#averageSalesList td {
-	border: 1px solid black;
-	background-color: white;
+	font-weight: bold;
+	font-size: 30;
 }
 
 #title {
 	font-weight: bold;
-	font-size: 20;
-	color: #04AFD4;
+	font-size: 26;
 }
 
-.value {
-	font-weight: bold;
-	font-size: 20;
-	color: #04AFD4;
+.paging {
+	width: 100%;
 }
 
-.month {
-	font-weight: bold;
-	font-size: 20;
-	color: #575757;
-}
+ .btn-bs {
+      width:115px;
+      margin-top:-6px;
+      height:32px;
+      font-size:15px;
+      padding: 10; 
+      background-color: #7DBEED;
+   }
+
 </style>
 <title>Document</title>
 
@@ -102,9 +67,7 @@ table {
 				<h4 id="title" align="center">직원 근무시간 조회</h4>
 				<div id="averageSalesList">
 					<table id="averageSales">
-						<tr>
-							<th th:text="${ SalaryDetailListl }"></th>
-						</tr>
+
 					</table>
 				</div>
 				<br>
@@ -125,7 +88,7 @@ table {
 							<td th:text="${ employee.employeeName }"></td>
 							<td th:text="${ employee.employeeId }"></td>
 							<td th:text="${ employee.employeeHireDate }"></td>
-							<td th:text="${ employee.employeeSumTime }"></td>
+							<td th:text="|${ employee.employeeSumTime } 시간|"></td>
 						</tr>
 					</table>
 				</div>
