--- a/com-project-clean/src/main/resources/templates/statistics/totalSales.html
+++ b/com-project-clean/src/main/resources/templates/statistics/totalSales.html
@@ -7,10 +7,13 @@
 
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+   
+    
 <style>
-div {
-	width: 100%;
-	height: 100%;
+
+tr:nth-of-type(1) {
+	background: #7DBEED;
 }
 
 table {
@@ -20,74 +23,39 @@ table {
 	border-style: hidden;
 }
 
-.paging {
-	width: 100%;
+table th {
+	border: 1px solid black;
 }
 
-#averageSalesList {
-	width: 100%;
-	min-width: 400px;
-	height: 100%;
-	display: flex;
-	justify-content: center;
+table td {
+	border: 1px solid black;
 }
 
-#averageSales th {
-	color: #04AFD4;
-	font-weight: bold;
-	background-color: lightgray;
-}
-
-#averageSales td {
-	background-color: lightgray;
-	font-weight: bold;
-	font-size: 20;
-	color: #04AFD4;
-	margin: auto;
-}
-
-#averageSalesList {
-	width: 100%;
-	min-width: 700px;
-	height: 100%;
-}
-
-#averageSalesList table {
-	width: 100%;
-	height: 100%;
-}
-
-#averageSalesList tr {
+table tr {
+	border: 1px solid black;
 	text-align: center;
-	border: 1px solid black;
-}
-
-#averageSalesList th {
-	background-color: lightgray;
-}
-
-#averageSalesList td {
-	border: 1px solid black;
-	background-color: white;
+	font-weight: bold;
+	font-size: 30;
 }
 
 #title {
 	font-weight: bold;
-	font-size: 20;
-	color: #04AFD4;
+	font-size: 26;
 }
 
-.value {
-	font-weight: bold;
-	font-size: 20;
-	color: #04AFD4;
+.paging {
+	width: 100%;
 }
 
-.month {
-	font-weight: bold;
-	font-size: 20;
-	color: #575757;
-}
+ .btn-bs {
+      width:115px;
+      margin-top:-6px;
+      height:32px;
+      font-size:15px;
+      padding: 10; 
+      background-color: #7DBEED;
+   }
+
 </style>
 <title>Document</title>
 
@@ -99,34 +67,48 @@ table {
 		<div th:include="statistics/statisticsAside.html"></div>
 		<article>
 			<section>
-				<button class="btn btn-outline-success" type="submit">리스트</button>
-				<button class="btn btn-outline-success" type="submit">그래프</button>
 				<br>
-				<h4 id="title" align="center">총 매출 통계</h4>
+				<h4 id="title" align="center">회사 매출 통계</h4>
+				<br>
 				<div id="averageSalesList">
 					<table id="averageSales">
+					<th class="month">총 매출 금액</th><th class="month">순 수익 금액</th>
 						<tr>
-							<th th:text="${ totalSales }"></th>
+							<th th:text="|${ totalSales } 원|"></th><td th:text="|${ netProfit } 원|">원</td>
 						</tr>
 					</table>
 				</div>
 				<br>
-				<div id="averageSalesList">
+				<br>
+				
+				<script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawVisualization);
 
-					<table>
-						<tr>
-							<th class="month">순수익 통계</th>
-						</tr>
-						<tr>
-							<td th:text="${ netProfit }"></td>
-						</tr>
-					</table>
+      function drawVisualization() {
+        // Some raw data (not necessarily accurate)
+        var data = google.visualization.arrayToDataTable([
+          ['직급명', '평균 급여' ],
+          ['총 매출 금액',  1844000 ],
+          ['순 수익 금액',  -67356000 ],
+                   
+        ]);
+        
+        var options = {
+          title : '회사 매출 통계 그래프',
+          vAxis: {title: '금액'},
+          seriesType: 'bars',
+          series: {5: {type: 'line'}}
+        };
 
-				</div>
+        var chart = new google.visualization.ComboChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+      </script>
 
+    <div id="chart_div" style="width: 900px; height: 500px;"></div>
 			</section>
 		</article>
 	</main>
-
 </body>
 </html>
