--- a/com-project-clean/src/main/resources/templates/admin/adminAside.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminAside.html
@@ -207,10 +207,10 @@ font-weight: bold;
         	<a style="font-size : 16px" href="/admin/hr/humanResource/selectAllVacation/move">휴가 전체 조회</a>
         </th:block>
         <th:block sec:authorize="hasRole('ROLE_ADMIN_HR')">	
-        <a style="font-size : 16px" href="/admin/hrCard/vacation/standbyFirstVacationList">1차 승인 대기 목록</a>
+        <a style="font-size : 16px" href="/admin/hrCard/vacation/standbyFirstVacationList">1차 결재 대기 목록</a>
         </th:block>
         <th:block sec:authorize="hasRole('ROLE_ADMIN_BOSS')">	
-        <a style="font-size : 16px" href="/admin/hrCard/boss/standbySecondVacationList">2차 승인 대기 목록</a>
+        <a style="font-size : 16px" href="/admin/hrCard/boss/standbySecondVacationList">2차 결재 대기 목록</a>
     	</th:block>
 
     </div>
