--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -96,9 +96,11 @@
 						        	<a class="dropdown-item" href="/admin/select/AllEmployee/move">전체 인원 조회</a>
 						        </th:block>    
 						        
-        <a class="dropdown-item" href="/admin/hrCard/adminList">관리자 조회</a>
         
-        <a class="dropdown-item" href="/admin/hrCard/adminRegist">관리자 등록</a>
+       
+       	<th:block sec:authorize="hasRole('ROLE_ADMIN_HR')">	
+        	<a class="dropdown-item" href="/admin/hrCard/hr/adminRegist">관리자 등록</a>
+        </th:block>
         
         <th:block sec:authorize="hasRole('ROLE_ADMIN_HR')">
 	        <a class="dropdown-item" href="/admin/hr/regist/employeePage">직원 등록</a>
@@ -108,7 +110,7 @@
 	        <a class="dropdown-item" href="/admin/select/blackList/move">블랙리스트 조회</a>
         </th:block>
         
-        <a class="dropdown-item" href="/admin/vacation/registVacation">휴가 신청</a>
+        <a class="dropdown-item" href="/admin/hrCard/registVacation">휴가 신청</a>
         
         <th:block sec:authorize="hasRole('ROLE_ADMIN')">
         	<a class="dropdown-item" href="/admin/select/selectMyVacation/move">나의 휴가 조회</a>
@@ -121,9 +123,12 @@
         	<a class="dropdown-item" href="/admin/hr/humanResource/selectAllVacation/move">휴가 전체 조회</a>
         </th:block>
         
-        <a class="dropdown-item" href="/admin/vacation/standbyFirstVacationList">1 승인 대기 목록</a>
-        
-        <a class="dropdown-item" href="/admin/vacation/standbySecondVacationList">1 승인 대기 목록</a>
+        <th:block sec:authorize="hasRole('ROLE_ADMIN_HR')">	
+        <a class="dropdown-item" href="/admin/hrCard/vacation/standbyFirstVacationList">1차 결재 대기 목록</a>
+        </th:block>
+        <th:block sec:authorize="hasRole('ROLE_ADMIN_BOSS')">	
+        <a class="dropdown-item" href="/admin/hrCard/boss/standbySecondVacationList">2차 결재 대기 목록</a>
+    	</th:block>
                                 
                                 
                             </ul>
