--- a/com-project-clean/src/main/resources/templates/admin/hrCard/hr/adminList.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/hr/adminList.html
@@ -134,7 +134,7 @@
 		</form>
          
                  
-         	<input type="radio" id="AdminRadio"  OnClick="location.href='/admin/hrCard/hr/adminList';">
+         	<input type="radio" id="AdminRadio" checked OnClick="location.href='/admin/hrCard/hr/adminList';">
 			<label for="AdminRadio">재직자</label> 
 			<input type="radio" id="retireAdminRadio" OnClick="location.href='/admin/hrCard/hr/retireAdminList'"> 
 			<label for="retireAdminRadio">퇴사자</label>
