--- a/com-project-clean/src/main/resources/templates/admin/hrCard/hr/retireAdminList.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/hr/retireAdminList.html
@@ -136,7 +136,7 @@
                 
       		<input type="radio" id="AdminRadio"  OnClick="location.href='/admin/hrCard/hr/adminList';">
 			<label for="AdminRadio">재직자</label> 
-			<input type="radio" id="retireAdminRadio" OnClick="location.href='/admin/hrCard/hr/retireAdminList'"> 
+			<input type="radio" id="retireAdminRadio" checked OnClick="location.href='/admin/hrCard/hr/retireAdminList'"> 
 			<label for="retireAdminRadio">퇴사자</label>
              
          </div>
