--- a/com-project-clean/src/main/resources/static/css/employee/checklist/checkList.css
+++ b/com-project-clean/src/main/resources/static/css/employee/checklist/checkList.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 20%;
     border: 0px solid;
-    background-color: rgba(104, 228, 255, 1);
+    background-color:  #7DBEED;
     font-size: xx-large;
     font-style: italic;
     color: white;
