--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
@@ -90,9 +90,9 @@
 	    			})
 	    		 } 
 	    	}
-	    	
+	    		
 	    	document.getElementById("accept").onclick = function(){
-	    		if(confirm("서류를 승인하시겠습니까? 직원에게 알람이 전송됩니다.")){
+	    		if(confirm("서류를 승인하시겠습니까? 해당 직원에게 알림이 전송됩니다.")){
 	    			
 	    			$("#path").val("/employee/checkList/accept/select")
 	    			$("#sendingMessage").val("체크리스트가 승인되었습니다. 급여 확인 부탁드립니다.")
