--- a/com-project-clean/src/main/resources/templates/common/adminReservationAside.html
+++ b/com-project-clean/src/main/resources/templates/common/adminReservationAside.html
@@ -84,7 +84,7 @@ $(function(){
 			const $notificationA = $(".notificationA");
 			if(data != 0){
 				$notificationA.css("color", "red");
-				setInterval(function () {
+				$(function () {
 					$('.notificationSpan').text(data);
 					$('.notificationSpan').fadeIn(100 , function () {
 						$('.notificationSpan').fadeOut(1000);
