--- a/com-project-clean/src/main/resources/templates/reservation/admin/adminReservationDetail.html
+++ b/com-project-clean/src/main/resources/templates/reservation/admin/adminReservationDetail.html
@@ -94,7 +94,7 @@
 			<script th:inline="javascript">
 				var penalty = 1;
 			
-				$(".employeeButton[[${applyEmployeeStat.count}]]" && ".employee[[${applyEmployeeStat.count}]]").on("click", function(){
+				$(".employeeButton[[${applyEmployeeStat.count}]]").on("click", function(){
 				   if(confirm("정말로 삭제하시겠습니까?")){
 					   const con = confirm("패털티 추가하시겠습니까?");
 					   if(con){
